[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pymavlog"
description = "A lightweight python library to parse MavLink log files"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Ricardo Martinez", email = "rik@rmargar.net" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: POSIX",
    "Operating System :: Unix"
]
dependencies = [
   "pymavlink>=2.4.0<=2.4.37",
   "numpy>=1.21.6<=1.24.2"
]
[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "coverage[toml] >= 6.5.0,< 8.0"
]
dev = [
    "pre-commit >=2.17.0,<3.0.0",
]

dynamic = ["version"]
